Kubernetes/yaml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/healthy"
spec:
  selector:
     app: nginx
  type: LoadBalancer
  ports:
  - port: 8088
    protocol: TCP
    targetPort: 80
