Kubernetes/yaml/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: www313cokr
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - path: /argocd(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /argocd(/|$)(.*)
#        pathType: Prefix
#        backend:
#          service:
#            name: argocd-server
#            port:
#              number: 80
