Kubernetes/yaml/nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
          #kubernetes.io/ingress.class: alb
          #alb.ingress.kubernetes.io/scheme: internet-facing
          #alb.ingress.kubernetes.io/target-type: instance
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "nginx-service"
                port:
                  number: 8088
