Kubernetes/yaml/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: www313cokr
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  #- host: www.313.co.kr
  - http:
      paths:
      #- path: /prometheus(/|$)(.*)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8smonitor-kube-prometheus-prometheus
            port:
              number: 9090
